RESOLVED FIXED210628
Distinguish between an empty WKAppBoundDomains array and a missing entry
https://bugs.webkit.org/show_bug.cgi?id=210628
Summary Distinguish between an empty WKAppBoundDomains array and a missing entry
Kate Cheney
Reported 2020-04-16 16:20:51 PDT
Currently we treat a missing WKAppBoundDomains key the same as an empty key, which is incorrect. Having the key present, even with no entries, should opt an app into app-bound domain behavior.
Attachments
Patch (2.64 KB, patch)
2020-04-16 16:55 PDT, Kate Cheney
no flags
Radar WebKit Bug Importer
Comment 1 2020-04-16 16:21:27 PDT
Kate Cheney
Comment 2 2020-04-16 16:55:00 PDT
Brent Fulgham
Comment 3 2020-04-16 17:23:19 PDT
Comment on attachment 396723 [details] Patch r=me
EWS
Comment 4 2020-04-16 18:13:29 PDT
Committed r260233: <https://trac.webkit.org/changeset/260233> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396723 [details].
Note You need to log in before you can comment on or make changes to this bug.