Distinguish between an empty WKAppBoundDomains array and a missing entry https://bugs.webkit.org/show_bug.cgi?id=210628 <rdar://problem/61909669>

Reviewed by Brent Fulgham.

Currently we treat a missing WKAppBoundDomains key the same as an empty
key, which is incorrect. Having the key present, even with no entries,
should opt an app into app-bound domain behavior.

* UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm:
(WebKit::WebsiteDataStore::initializeAppBoundDomains):
(WebKit::WebsiteDataStore::beginAppBoundDomainCheck):


Canonical link: https://commits.webkit.org/223506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260233 268f45cc-cd09-0410-ab3c-d52691b4dbfc